--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,18 @@
-
+version: '3'
 
 services:
   backend:
     build:
       context: ./detailing-be
       dockerfile: Dockerfile
+    hostname: highenddetailing
     ports:
       - "8080:8080"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    depends_on:
+      mysql1:
+        condition: service_healthy
 
   frontend:
     build:
@@ -16,3 +22,33 @@ services:
       - "3000:3000"
     volumes:
       - ./detailing-fe:/app
+
+  mysql1:
+    image: mysql:8.0
+    container_name: highenddetailing-mysql1
+    environment:
+      MYSQL_ROOT_PASSWORD: zaynabFA911
+      MYSQL_DATABASE: highenddetailing-db
+      MYSQL_USER: admin
+      MYSQL_PASSWORD: pwd
+    ports:
+      - "3307:3306"
+    volumes:
+      - ./data/mysql1:/var/lib/mysql1
+      - ./data/init.d:/docker-entrypoint-initdb.d
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-uadmin", "-ppwd", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+
+  phpmyadmin:
+    image: phpmyadmin:5.2.0
+    container_name: PhpMyAdmin
+    links:
+      - mysql1
+    restart: always
+    ports:
+      - "5013:80"
+    environment:
+      PMA_ARBITRARY: 1
