--- a/detailing-fe/package.json
+++ b/detailing-fe/package.json
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
-    "@playwright/test": "^1.49.0"
+    "@playwright/test": "^1.49.0",
+    "@types/testing-library__jest-dom": "^5.14.9"
   }
 }
