--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,25 @@
+# Node.js dependencies
 node_modules/
-/test-results/
-/playwright-report/
-/blob-report/
-/playwright/.cache/
+
+# Test reports and cache
+test-results/
+playwright-report/
+blob-report/
+playwright/.cache/
+
+# IDE files
+.idea/
+
+# OS system files
+.DS_Store        # macOS
+Thumbs.db        # Windows
+
+# Environment files
+.env
+*.env
+
+# Log files
+**/*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
