--- a/detailing-fe/package.json
+++ b/detailing-fe/package.json
@@ -12,11 +12,14 @@
     "@types/react-dom": "^18.3.1",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "cookie": "^1.0.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
+    "react-router": "^7.0.2",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
