--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,10 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
+    deploy:
+      resources:
+        limits:
+          memory: 512M # Limit the container to 128 MB of RAM
     volumes:
       - ./detailing-fe:/app
 
