--- a/detailing-fe/Dockerfile
+++ b/detailing-fe/Dockerfile
@@ -1,17 +1,26 @@
+# Use a lightweight Node.js image
 FROM node:18-alpine
 
 # Set working directory
 WORKDIR /app
 
-# Install dependencies
+# Copy dependency files
 COPY package*.json ./
-RUN npm cache clean --force && npm install
 
-# Copy the rest of the application code
+# Install only production dependencies
+RUN npm install --production
+
+# Copy the rest of the application
 COPY . .
+
+# Build the React app for production
+RUN npm run build
+
+# Install `serve` to serve the static files
+RUN npm install -g serve
 
 # Expose the port the app runs on
 EXPOSE 3000
 
-# Start the app
-CMD ["npm", "start"]
+# Serve the built app with React Router support
+CMD ["serve", "-s", "build", "-l", "3000", "--single"]
