--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -15,7 +15,7 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
       - name: Make Gradlew Executable
-        working-directory: ./
+        working-directory: ./detailing-be
         run: chmod +x ./gradlew
       - name: Run Gradle Tests
         run: ./gradlew clean test
