--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -15,10 +15,8 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
       - name: Make Gradlew Executable
-        working-directory: .
+        working-directory: ./detailing-be
         run: chmod +x gradlew
       - name: Run Gradle Tests
         working-directory: ./detailing-be
-        run: ../gradlew clean test
-      - name: Debug Gradle Wrapper
-        run: ls -l detailing-be/gradle/wrapper
+        run: ./gradlew clean test
