--- a/detailing-be/build.gradle
+++ b/detailing-be/build.gradle
@@ -63,6 +63,7 @@ dependencies {
 	testImplementation 'io.projectreactor:reactor-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
+	testImplementation 'org.springframework.security:spring-security-test'
 }
 
 
