--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -1,3 +1,4 @@
+name: CI Workflow
 on:
   push:
     branches: [ main ]
@@ -20,3 +21,14 @@ jobs:
       - name: Run Gradle Tests
         working-directory: ./detailing-be
         run: ./gradlew clean test
+  qodana:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Run Qodana
+        uses: JetBrains/qodana-action@v2023.1
+        with:
+          project-dir: ./detailing-be
+          results-dir: ./qodana-results
+          fail-threshold: 10
