--- a/detailing-be/src/main/resources/application.yml
+++ b/detailing-be/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+# Common configuration (shared across all profiles)
 frontend:
   url: http://localhost:3000/
 
@@ -6,25 +7,6 @@ backend:
 
 website:
   domain: localhost
-
-spring:
-  datasource:
-    url: jdbc:mysql://mysql1/highenddetailing-db
-    username: admin
-    password: pwd
-
-  jpa:
-    hibernate:
-      ddl-auto: none
-
-  config:
-    activate:
-      on-profile: docker
-
-  sql:
-    init:
-      platform: mysql
-      mode: always
 
 auth0:
   domain: ${AUTH0_DOMAIN}
@@ -43,6 +25,26 @@ server:
 
 ---
 
+# Local Development Profile (used with `docker-compose`)
+spring:
+  config:
+    activate:
+      on-profile: docker
+  datasource:
+    url: jdbc:mysql://mysql1/highenddetailing-db
+    username: admin
+    password: pwd
+  jpa:
+    hibernate:
+      ddl-auto: none
+  sql:
+    init:
+      platform: mysql
+      mode: always
+
+---
+
+# Test Profile (used during testing with H2 database)
 spring:
   config:
     activate:
@@ -60,7 +62,22 @@ spring:
   h2:
     console:
       enabled: true
-
   web:
     resources:
       static-locations: classpath:/custom/, classpath:/static/
+
+---
+
+# Production Profile (used with AWS RDS)
+spring:
+  config:
+    activate:
+      on-profile: prod
+  datasource:
+    url: ${SPRING_DATASOURCE_URL} # AWS RDS URL (set in Render environment variables)
+    username: ${SPRING_DATASOURCE_USERNAME} # AWS RDS username
+    password: ${SPRING_DATASOURCE_PASSWORD} # AWS RDS password
+  jpa:
+    hibernate:
+      ddl-auto: update # Change as per your requirement (e.g., none for production)
+    database-platform: org.hibernate.dialect.MySQL8Dialect
