--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,10 @@ services:
       - AUTH0_CLIENT_ID=${AUTH0_CLIENT_ID}
       - AUTH0_CLIENT_SECRET=${AUTH0_CLIENT_SECRET}
       - AUTH0_AUDIENCE=${AUTH0_AUDIENCE}
+      - AUTH0_AUDIENCE=${AUTH0_AUDIENCE}
+      - AWS_SPRING_DATASOURCE_URL=jdbc:mysql://mydb.cx22ommku8d6.ca-central-1.rds.amazonaws.com:3306/highenddetailing-db
+      - SPRING_DATASOURCE_USERNAME=admin
+      - SPRING_DATASOURCE_PASSWORD=adminadmin
     depends_on:
       mysql1:
         condition: service_healthy
@@ -35,6 +39,8 @@ services:
               memory: 512M # Limit the container to 128 MB of RAM
     volumes:
       - ./detailing-fe:/app
+      - /app/node_modules # Avoid overwriting node_modules
+      - /app/build
 
   mysql1:
     image: mysql:8.0
