--- a/detailing-be/src/main/resources/application.yml
+++ b/detailing-be/src/main/resources/application.yml
@@ -9,9 +9,9 @@ website:
 
 spring:
   datasource:
-    url: jdbc:mysql://mysql1/highenddetailing-db
-    username: admin
-    password: pwd
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
 
   jpa:
     hibernate:
