--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,12 @@ services:
       - AUTH0_CLIENT_ID=${AUTH0_CLIENT_ID}
       - AUTH0_CLIENT_SECRET=${AUTH0_CLIENT_SECRET}
       - AUTH0_AUDIENCE=${AUTH0_AUDIENCE}
+      - SPRING_DATASOURCE_URL=${SPRING_DATASOURCE_URL}
+      - SPRING_DATASOURCE_USERNAME=${SPRING_DATASOURCE_USERNAME}
+      - SPRING_DATASOURCE_PASSWORD=${SPRING_DATASOURCE_PASSWORD}
     depends_on:
-      mysql1:
-        condition: service_healthy
+      frontend:
+        condition: service_started
 
   frontend:
     build:
@@ -30,40 +33,10 @@ services:
     ports:
       - "3000:3000"
     deploy:
-          resources:
-            limits:
-              memory: 512M # Limit the container to 128 MB of RAM
+      resources:
+        limits:
+          memory: 512M # Limit the container to 512 MB of RAM
     volumes:
       - ./detailing-fe:/app
       - /app/node_modules # Avoid overwriting node_modules
       - /app/build
-
-  mysql1:
-    image: mysql:8.0
-    container_name: highenddetailing-mysql1
-    environment:
-      MYSQL_ROOT_PASSWORD: zaynabFA911
-      MYSQL_DATABASE: highenddetailing-db
-      MYSQL_USER: admin
-      MYSQL_PASSWORD: pwd
-    ports:
-      - "3307:3306"
-    volumes:
-      - ./data/mysql1:/var/lib/mysql1
-      - ./data/init.d:/docker-entrypoint-initdb.d
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-uadmin", "-ppwd", "-h", "localhost"]
-      interval: 10s
-      timeout: 5s
-      retries: 10
-
-  phpmyadmin:
-    image: phpmyadmin:5.2.0
-    container_name: PhpMyAdmin
-    links:
-      - mysql1
-    restart: always
-    ports:
-      - "5013:80"
-    environment:
-      PMA_ARBITRARY: 1
