--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "jwt-decode": "^4.0.0",
     "react-bootstrap": "^2.10.7",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.49.0",
