--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,14 +30,14 @@ services:
     ports:
       - "3000:3000"
     deploy:
-          resources:
-            limits:
-              memory: 512M # Limit the container to 128 MB of RAM
-    volumes:
-      - ./detailing-fe:/app
-      - /app/node_modules # Avoid overwriting node_modules
-      - /app/build
-
+      resources:
+        limits:
+          memory: 512M # Limit the container to 512 MB of RAM
+    # Remove volume mounts for production
+    # volumes:
+    #   - ./detailing-fe:/workspace
+    #   - /workspace/node_modules # Avoid overwriting node_modules
+    #   - /workspace/build
 
   mysql1:
     image: mysql:8.0
