--- a/detailing-fe/Dockerfile
+++ b/detailing-fe/Dockerfile
@@ -1,7 +1,7 @@
-# Use a lightweight Node.js image
-FROM node:18-alpine
+# Stage 1: Build the React app
+FROM node:18-alpine AS build
 
-# Set working directory to /workspace to match DigitalOcean's expectation
+# Set working directory
 WORKDIR /workspace
 
 # Copy dependency files
@@ -16,8 +16,17 @@ COPY . .
 # Build the React app for production
 RUN npm run build
 
-# Install `serve` to serve the static files
+# Stage 2: Serve the React app using `serve`
+FROM node:18-alpine
+
+# Install `serve` globally
 RUN npm install -g serve
+
+# Set working directory
+WORKDIR /workspace
+
+# Copy the build from the previous stage
+COPY --from=build /workspace/build ./build
 
 # Expose the port the app runs on
 EXPOSE 3000
