--- a/detailing-fe/Dockerfile
+++ b/detailing-fe/Dockerfile
@@ -1,35 +1,23 @@
-# Stage 1: Build the React app
-FROM node:18-alpine AS build
+# Use a lightweight Node.js image
+FROM node:18-alpine
 
-# Set working directory to /workspace to match DigitalOcean's expectation
-WORKDIR /workspace
+# Set working directory
+WORKDIR /app
 
 # Copy dependency files
 COPY package*.json ./
 
-# Install all dependencies (including devDependencies for build)
+# Install only production dependencies
 RUN npm install
 
 # Copy the rest of the application
 COPY . .
 
-# Debugging step: List contents of /workspace/public to ensure index.html exists
-RUN ls -la /workspace/public
-
 # Build the React app for production
 RUN npm run build
 
-# Stage 2: Serve the React app using `serve`
-FROM node:18-alpine
-
-# Install `serve` globally
+# Install `serve` to serve the static files
 RUN npm install -g serve
-
-# Set working directory
-WORKDIR /workspace
-
-# Copy the build from the previous stage
-COPY --from=build /workspace/build ./build
 
 # Expose the port the app runs on
 EXPOSE 3000
