--- a/detailing-fe/package.json
+++ b/detailing-fe/package.json
@@ -54,6 +54,7 @@
     "@types/react-bootstrap": "^0.32.37",
     "@types/react-router-bootstrap": "^0.26.6",
     "@types/react-router-dom": "^5.3.3",
+    "prettier": "^3.4.2",
     "typescript": "^4.9.5"
   }
 }
