--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,17 @@ services:
       - AUTH0_CLIENT_ID=${AUTH0_CLIENT_ID}
       - AUTH0_CLIENT_SECRET=${AUTH0_CLIENT_SECRET}
       - AUTH0_AUDIENCE=${AUTH0_AUDIENCE}
-    depends_on:
-      mysql1:
-        condition: service_healthy
+      - SPRING_DATASOURCE_URL=${SPRING_DATASOURCE_URL}
+      - SPRING_DATASOURCE_USERNAME=${SPRING_DATASOURCE_USERNAME}
+      - SPRING_DATASOURCE_PASSWORD=${SPRING_DATASOURCE_PASSWORD}
+    depends_on: []
+
+
+    healthcheck:
+      test: [ "CMD-SHELL", "curl -f http://backend:8080 || exit 1" ] # Check if backend is accessible
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   frontend:
     build:
@@ -30,38 +38,30 @@ services:
     ports:
       - "3000:3000"
     deploy:
-          resources:
-            limits:
-              memory: 512M # Limit the container to 128 MB of RAM
+      resources:
+        limits:
+          memory: 512M # Limit the container to 128 MB of RAM
     volumes:
       - ./detailing-fe:/app
-
-  mysql1:
-    image: mysql:8.0
-    container_name: highenddetailing-mysql1
-    environment:
-      MYSQL_ROOT_PASSWORD: zaynabFA911
-      MYSQL_DATABASE: highenddetailing-db
-      MYSQL_USER: admin
-      MYSQL_PASSWORD: pwd
-    ports:
-      - "3307:3306"
-    volumes:
-      - ./data/mysql1:/var/lib/mysql1
-      - ./data/init.d:/docker-entrypoint-initdb.d
+      - /app/node_modules # Avoid overwriting node_modules
+      - /app/build
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-uadmin", "-ppwd", "-h", "localhost"]
-      interval: 10s
-      timeout: 5s
-      retries: 10
+      test: [ "CMD", "curl", "-f", "http://localhost:3000" ] # Check if the frontend is accessible
+      interval: 30s # Check every 30 seconds
+      timeout: 10s # Timeout after 10 seconds
+      retries: 3 # Mark as unhealthy after 3 failed checks
 
   phpmyadmin:
     image: phpmyadmin:5.2.0
     container_name: PhpMyAdmin
-    links:
-      - mysql1
     restart: always
     ports:
       - "5013:80"
     environment:
-      PMA_ARBITRARY: 1
+      PMA_USER: ${SPRING_DATASOURCE_USERNAME}
+      PMA_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
+    healthcheck:
+      test: [ "CMD-SHELL", "curl -f http://localhost:80 || exit 1" ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
