--- a/.github/workflows/deployment_frontend.yml
+++ b/.github/workflows/deployment_frontend.yml
@@ -3,25 +3,23 @@ name: Frontend CI Deployment
 on:
   push:
     branches:
-      - main  # Run on push to main
+      - main
   pull_request:
     branches:
-      - main  # Run on pull requests targeting the main branch
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Check out the repository
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Step 2: Set up Node.js (if you're using Node.js)
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'  # Specify the Node.js version your project uses
+          node-version: '16'
 
       # Step 3: Install dependencies
       - name: Install dependencies
@@ -32,8 +30,3 @@ jobs:
       - name: Run tests
         run: |
           npm run test -- --ci --coverage
-
-      # Optional: Run linting if you have a linter configured
-      - name: Run linting
-        run: |
-          npm run lint
