--- a/detailing-fe/package.json
+++ b/detailing-fe/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.3",
     "cookie": "^1.0.2",
     "jwt-decode": "^4.0.0",
+    "lint": "^0.8.19",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
@@ -29,7 +30,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'"
   },
   "eslintConfig": {
     "extends": [
@@ -50,11 +52,16 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.18.0",
     "@types/jwt-decode": "^3.1.0",
     "@types/react-bootstrap": "^0.32.37",
     "@types/react-router-bootstrap": "^0.26.6",
     "@types/react-router-dom": "^5.3.3",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^15.14.0",
     "prettier": "^3.4.2",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "typescript-eslint": "^8.20.0"
   }
 }
