--- a/.github/workflows/eslint-ci.yml
+++ b/.github/workflows/eslint-ci.yml
@@ -27,7 +27,7 @@ jobs:
         working-directory: ./detailing-fe
       - name: Run ESLint to ensure frontend code is linted
         run: npm run lint
-        working-directory: ./frontend
+        working-directory: ./detailing-fe
       - name: Run build to ensure no build errors
         run: npm run build
         working-directory: ./detailing-fe
