--- a/detailing-fe/package.json
+++ b/detailing-fe/package.json
@@ -53,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@eslint/js": "^9.18.0",
     "@types/jwt-decode": "^3.1.0",
     "@types/react-bootstrap": "^0.32.37",
