--- a/detailing-fe/package.json
+++ b/detailing-fe/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.3",
     "react-router": "^7.0.2",
     "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^7.0.2",
@@ -52,6 +53,7 @@
   "devDependencies": {
     "@types/jwt-decode": "^3.1.0",
     "@types/react-bootstrap": "^0.32.37",
+    "@types/react-modal": "^3.16.3",
     "@types/react-router-bootstrap": "^0.26.6",
     "@types/react-router-dom": "^5.3.3",
     "prettier": "^3.4.2",
