--- a/detailing-fe/Dockerfile
+++ b/detailing-fe/Dockerfile
@@ -1,6 +1,18 @@
 # Use a lightweight Node.js image
 FROM node:20-alpine
 
+# Set build-time arguments for React environment variables
+ARG REACT_APP_AUTH0_DOMAIN
+ARG REACT_APP_AUTH0_CLIENT_ID
+ARG REACT_APP_AUTH0_AUDIENCE
+ARG REACT_APP_AUTH0_CALLBACK_URL
+
+# Inject environment variables into the build
+ENV REACT_APP_AUTH0_DOMAIN=${REACT_APP_AUTH0_DOMAIN}
+ENV REACT_APP_AUTH0_CLIENT_ID=${REACT_APP_AUTH0_CLIENT_ID}
+ENV REACT_APP_AUTH0_AUDIENCE=${REACT_APP_AUTH0_AUDIENCE}
+ENV REACT_APP_AUTH0_CALLBACK_URL=${REACT_APP_AUTH0_CALLBACK_URL}
+
 # Set working directory
 WORKDIR /app
 
