--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@playwright/test": "^1.49.0",
     "@types/node": "^22.10.1"
   },
