--- a/detailing-fe/package.json
+++ b/detailing-fe/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cookie": "^1.0.2",
+    "framer-motion": "^12.0.6",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
