--- a/detailing-fe/package.json
+++ b/detailing-fe/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
     "recharts": "^2.15.0",
+    "swiper": "^11.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
