--- a/detailing-fe/package.json
+++ b/detailing-fe/package.json
@@ -27,7 +27,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
     "recharts": "^2.15.0",
-    "swiper": "^11.2.1",
+    "swiper": "^11.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -60,6 +60,7 @@
     "@types/react-modal": "^3.16.3",
     "@types/react-router-bootstrap": "^0.26.6",
     "@types/react-router-dom": "^5.3.3",
+    "@types/swiper": "^6.0.0",
     "prettier": "^3.4.2",
     "typescript": "^4.9.5"
   }
