--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,12 +14,11 @@ services:
       - AUTH0_CLIENT_ID=${AUTH0_CLIENT_ID}
       - AUTH0_CLIENT_SECRET=${AUTH0_CLIENT_SECRET}
       - AUTH0_AUDIENCE=${AUTH0_AUDIENCE}
-      - SPRING_DATASOURCE_URL=jdbc:mysql://db:3306/${MYSQL_DATABASE}
+      - spring.datasource.url=jdbc:mysql://192.168.2.139:3306/high_end_DB?useSSL=false&allowPublicKeyRetrieval=true
       - SPRING_DATASOURCE_USERNAME=${MYSQL_USER}
       - SPRING_DATASOURCE_PASSWORD=${MYSQL_PASSWORD}
-    depends_on:
-      db:
-        condition: service_healthy
+
+
 
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://backend:8080 || exit 1"]
@@ -54,29 +53,29 @@ services:
       timeout: 10s
       retries: 3
 
-  db:
-    image: mysql:latest
-    container_name: mysql_db
-    restart: always
-    ports:
-      - "3307:3306"
-    environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-    volumes:
-      - /mnt/cache/appdata/mysql/data:/var/lib/mysql
-      - /mnt/cache/appdata/mysql/logs:/var/log/mysql
-    healthcheck:
-      test:
-        [
-          "CMD-SHELL",
-          "mysqladmin ping -h localhost -uroot -p${MYSQL_ROOT_PASSWORD} || exit 1",
-        ]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+#  db:
+#    image: mysql:latest
+#    container_name: mysql-server
+#    restart: always
+#    ports:
+#      - "3306:3306"
+#    environment:
+#      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+#      MYSQL_DATABASE: ${MYSQL_DATABASE}
+#      MYSQL_USER: ${MYSQL_USER}
+#      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+#    volumes:
+#      - /mnt/cache/appdata/mysql/data:/var/lib/mysql
+#      - /mnt/cache/appdata/mysql/logs:/var/log/mysql
+#    healthcheck:
+#      test:
+#        [
+#          "CMD-SHELL",
+#          "mysqladmin ping -h localhost -uroot -p${MYSQL_ROOT_PASSWORD} || exit 1",
+#        ]
+#      interval: 30s
+#      timeout: 10s
+#      retries: 3
 
   phpmyadmin:
     image: phpmyadmin:5.2.0
@@ -85,11 +84,9 @@ services:
     ports:
       - "5013:80"
     environment:
-      PMA_HOST: db
+      PMA_HOST: 192.168.2.139
       PMA_USER: ${MYSQL_USER}
       PMA_PASSWORD: ${MYSQL_PASSWORD}
-    depends_on:
-      - db
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:80 || exit 1"]
       interval: 30s
