--- a/detailing-fe/package.json
+++ b/detailing-fe/package.json
@@ -15,6 +15,8 @@
     "bootstrap": "^5.3.3",
     "cookie": "^1.0.2",
     "framer-motion": "^12.0.6",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
