--- a/detailing-be/src/main/resources/application.yml
+++ b/detailing-be/src/main/resources/application.yml
@@ -9,9 +9,9 @@ website:
 
 spring:
   datasource:
-    url: ${SPRING_DATASOURCE_URL}
-    username: ${SPRING_DATASOURCE_USERNAME}
-    password: ${SPRING_DATASOURCE_PASSWORD}
+      url: ${DB_URL}
+      username: ${SPRING_DATASOURCE_USERNAME}
+      password: ${SPRING_DATASOURCE_PASSWORD}
 
   jpa:
     hibernate:
