--- a/detailing-fe/package.json
+++ b/detailing-fe/package.json
@@ -14,12 +14,15 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cookie": "^1.0.2",
+    "data": "^1.0.0",
     "framer-motion": "^12.0.6",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "jwt-decode": "^4.0.0",
+    "picker": "^0.1.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-modal": "^3.16.3",
