--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "jwt-decode": "^4.0.0",
     "react-bootstrap": "^2.10.7",
+    "react-datepicker": "^8.0.0",
     "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
