--- a/detailing-fe/package.json
+++ b/detailing-fe/package.json
@@ -17,6 +17,8 @@
     "data": "^1.0.0",
     "framer-motion": "^12.0.6",
     "html2canvas": "^1.4.1",
+    "i18next": "^23.2.3",
+    "i18next-browser-languagedetector": "^8.0.3",
     "jspdf": "^2.5.2",
     "jwt-decode": "^4.0.0",
     "picker": "^0.1.4",
@@ -24,6 +26,7 @@
     "react-bootstrap": "^2.10.7",
     "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
     "react-modal": "^3.16.3",
     "react-router": "^7.0.2",
