--- a/.github/workflows/reset-system.yml
+++ b/.github/workflows/reset-system.yml
@@ -14,6 +14,6 @@ jobs:
     steps:
       - name: Restart Unraid Service
         run: |
-          curl -X POST "https://highend-1.onrender.com/webhook/restart" \
+          curl -X POST "https://webhook.high-end-detailing.com/webhook/restart" \
           -H "Content-Type: application/json" \
           -d '{"container": "${{ github.event.inputs.container }}"}'
